--- a/documentation/antora.yml
+++ b/documentation/antora.yml
@@ -1,5 +1,5 @@
-name: template-tutorial
-title: Template Tutorial
+name: debezium-tutorial
+title: Debezium Tutorial
 version: master
 nav:
   - modules/ROOT/nav.adoc
