--- a/site.yml
+++ b/site.yml
@@ -2,9 +2,9 @@ runtime:
   cache_dir: ./.cache/antora
 
 site:
-  title: Template Tutorial
+  title: Debezium Tutorial
   url: https://redhat-scholars.github.io/course-template
-  start_page: template-tutorial::index.adoc
+  start_page: debezium-tutorial::index.adoc
 
 content:
   sources:
