--- a/apps/infra/elementary/dbz-ui/compose.yaml
+++ b/apps/infra/elementary/dbz-ui/compose.yaml
@@ -1,24 +1,22 @@
 version: '3'
 services:
-  zookeeper:
-    container_name: zookeeper
-    image: quay.io/debezium/zookeeper:2.2.0.Final
-    networks:
-      - demo-network
   kafka:
     container_name: kafka
-    image: quay.io/debezium/kafka:2.2.0.Final
+    image: quay.io/strimzi/kafka:0.40.0-kafka-3.7.0
+    command:
+      - /bin/sh
+      - -c
+      - './bin/kafka-storage.sh format -t 9EDB9GBlQASth3IVRW0BCw -c ./config/kraft/server.properties && ./bin/kafka-server-start.sh ./config/kraft/server.properties --override advertised.listeners=$${KAFKA_ADVERTISED_LISTENERS}'
     ports:
       - "9092:9092"
-    depends_on:
-      - zookeeper
     environment:
-      - ZOOKEEPER_CONNECT=zookeeper:2181
+      - LOG_DIR=/tmp/logs
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
     networks:
-      - demo-network
+      - demo-network  
   mysql:
     container_name: mysql
-    image: quay.io/debezium/example-mysql:2.2.0.Final
+    image: quay.io/debezium/example-mysql:2.6
     ports:
       - "3306:3306"
     environment:
@@ -29,7 +27,7 @@ services:
       - demo-network
   connect:
     container_name: connect
-    image: quay.io/debezium/connect:2.2.0.Final
+    image: quay.io/debezium/connect:2.6
     ports:
       - "8083:8083"
     depends_on:
@@ -48,6 +46,7 @@ services:
       - demo-network
   debezium-ui:
     container_name: debezium-ui
+    #NOTE: tag '2.5' is the most recent currently but has no arm image on quay yet hence sticking to 2.2
     image: quay.io/debezium/debezium-ui:2.2
     ports:
       - "8080:8080"
