--- a/apps/infra/elementary/dbz-ui/compose.yaml
+++ b/apps/infra/elementary/dbz-ui/compose.yaml
@@ -16,7 +16,7 @@ services:
       - demo-network  
   mysql:
     container_name: mysql
-    image: quay.io/debezium/example-mysql:2.6
+    image: quay.io/debezium/example-mysql:2.6.0.Final
     ports:
       - "3306:3306"
     environment:
@@ -27,7 +27,7 @@ services:
       - demo-network
   connect:
     container_name: connect
-    image: quay.io/debezium/connect:2.6
+    image: quay.io/debezium/connect:2.6.0.Final
     ports:
       - "8083:8083"
     depends_on:
